# missing_sem

./: README.md
CMake_and_make_tut/: CMakeLists.txt  func.cpp  main.cpp  make.md  makefile
cmake_tut/: func.h
exercises_1/: date.txt  read_cpu_temp.sh  semster.sh
exercises_2/: error_func.sh  find_error.sh  string_subs.sh  use_func.sh
exercises_2/macro_polo/: README.md  activate.sh  marco.sh  path.txt  polo.sh
profiling_exercises/: profiling.md
shell/: commands.md  run.sh  shellbang.py  test_pid.sh
